--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-i
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>NyanCat</title>
+    <link href="root/main.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1 style="text-align:center; color: white">NyanCat Follow Mouse</h1>
+    <p style="text-align:center; color: white">Credit: https://codepen.io/brunorcunha/pen/wikEI</p>
+    <div class="nyan"></div>
+    <script src="root/jquery.min.js"></script>    
+    <script src="root/main.js"></script>
+  </body>
+</html>
